--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<html>
+<head>
+<title>BUS 465 Lab 2</title>
+</head>
+<body>
+	<h1>What we want to learn in this course </h1>
+		<p> Hello World! This is Nancy, Harasees, and Joseph's web page for Lab 2!</p>
+	
+	<h2>Joseph</h2>
+		<p>In Lab 2, we are learning and familiarizing ourselves with HTML syntax and tags. We'll try to demonstrate our basic proficiency wiht the aforementioned throughout this web page. For instance, the next paragraph will be bolded.</p>
+		<p> <strong> This paragraph here is bolded. Very extravagant.</strong> </p>
+	
+	<h2>Harasees</h2>
+		<p> I love writing HTML code! Look at the cool things I can do: </p>
+		<ul>
+			<li> <i> This is in italics! </i> </li>
+			<li> <strike> Hello </strike> </li>
+		</ul>
+		
+	<h2> Nancy </h2>
+	<p>I don't love writing HTML code, but like learning new things.</p>
+	
+</body>
+</html>
